@@ -1,3 +1,8 @@
+2012-01-21  Rene Liebscher <R.Liebscher@gmx.de>
+
+	bug #21797: AT90PWM316: New part description
+	* avrdude.conf.in: added pwm316 with parent pwm3b but 16KB flash
+
 2012-01-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* configure.ac: Check for presence of lusb_usb.h as an alternative
